# qhy42-control

./: README.md  pyproject.toml  pyro_camera_client.py  pyro_camera_server.py  qhy42_camera.py  qhy42_client_script.py  qhy42_gui.py
