[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qhy42-gui"
version = "0.1.0"
description = "Live GUI viewer for QHY42 camera with real-time image display and controls"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "PySide6>=6.4",
    "numpy>=1.23",
    "astropy>=5.1",
    "matplotlib>=3.5",
    "tqdm>=4.64",
    "qcam-sdk",
    "pyro5",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
